# CodeWars

./: .gitignore  .gitmodules  README.md  run.sh
docs/: language.md  programmer-docs.md
examples/: alpha.rbsh  bomber.rbsh  simple.rbsh
include/: commands.hpp  direction.hpp  expressions.hpp  field_object.hpp  interpreter.hpp  robot_actions.hpp  robot_info.hpp  robot_logic.hpp
project/: CMakeLists.txt  Doxyfile  README.md  build.sh
project/docs/: README.md  classes.puml  game-description.md  language.md  programmer-docs.md  project-design.md  proposal.md
project/examples/: saved.rbsh  test.rbsh
project/include/: battle_controller.hpp  battle_helper.hpp  character.hpp  command.hpp  command_factory.hpp  declarations.hpp  direction.hpp  field_object.hpp  field_objects.hpp  interpret.hpp  interpreter.hpp  robot.hpp  robot_actions.hpp  robot_events.hpp  robot_info.hpp  rotation.hpp
project/include-old/: battle_controller.hpp  direction.hpp  robot.hpp
project/src/: CMakeLists.txt  COMPILATION-GUIDE.md  battle_controller.cpp  battle_controller.hpp  build.sh  direction.cpp  field_object.cpp  hello_functions.cpp  hello_functions.hpp  hello_main.cpp  interpret.cpp  interpreter.cpp  main.cpp  robot.cpp  rotation.cpp
project/src-old/: battle_helper.cpp  field_object.cpp  robot.cpp
src/: battle_controller.cpp  command_factory.cpp  main.cpp  robot.cpp  robot_logic.cpp
